--- a/index.html
+++ b/index.html
@@ -45,10 +45,13 @@
 
   <header class="bg-primary text-white">
     <div class="container text-center">
+    
+    </div>
+  </header>
+   <div class="container text-center">
       <h1>Introducing CLASSIC</h1>
       <p class="lead">Classic Is A Cool Discord Bot. Although Classic Don't Have Many Features But Its Stable.</p>
     </div>
-  </header>
   <header class="bg-primary text-white">
     <div class="container text-center">
     </div>
