--- a/index.html
+++ b/index.html
@@ -48,10 +48,12 @@
     
     </div>
   </header>
+    <header class="bg-primary text-white">
+
    <div class="container text-center">
       <h1>Introducing CLASSIC</h1>
-      <p class="lead">Classic Is A Cool Discord Bot. Although Classic Don't Have Many Features But Its Stable.</p>
-    </div>
+      <p class="lead">Classic Is A Cool Discord Bot. Although Classic Doesn't Have Many Features But Its Stable.</p>
+      </div></header>
   <header class="bg-primary text-white">
     <div class="container text-center">
     </div>
@@ -61,8 +63,8 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 mx-auto">
-          <h2>About this page</h2>
-          <p class="lead">This is a great place to talk about your webpage. This template is purposefully unstyled so you can use it as a boilerplate or starting point for you own landing page designs! This template features:</p>
+          <h2>About Classic</h2>
+          <p class="lead">Classic Is A Classic Discord Bot That Play Music Like Old Time With Less Features And No Bug</p>
           <ul>
             <li>Clickable nav links that smooth scroll to page sections</li>
             <li>Responsive behavior when clicking nav links perfect for a one page website</li>
