--- a/index.html
+++ b/index.html
@@ -48,12 +48,9 @@
     
     </div>
   </header>
-    <header class="bg-primary text-white">
-
-   <div class="container text-center">
+<div style="background-color:#007bff">
       <h1>Introducing CLASSIC</h1>
-      <p class="lead">Classic Is A Cool Discord Bot. Although Classic Doesn't Have Many Features But Its Stable.</p>
-      </div></header>
+      <p class="lead">Classic Is A Cool Discord Bot. Although Classic Doesn't Have Many Features But Its Stable.</p></div>
   <header class="bg-primary text-white">
     <div class="container text-center">
     </div>
