--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     
     </div>
   </header>
-<div style="background-color:#007bff">
+  <div class="container text-center" style="background-color:#007bff">
       <h1>Introducing CLASSIC</h1>
       <p class="lead">Classic Is A Cool Discord Bot. Although Classic Doesn't Have Many Features But Its Stable.</p></div>
   <header class="bg-primary text-white">
