--- a/index.html
+++ b/index.html
@@ -51,7 +51,10 @@
   <div style="background-color:#007bff">
   <div class="container text-center" style="background-color:#007bff">
       <h1>Introducing CLASSIC</h1>
-      <p class="lead">Classic Is A Cool Discord Bot. Although Classic Doesn't Have Many Features But Its Stable.</p></div></div>
+   
+    <p class="lead">Classic Is A Cool Discord Bot. Although Classic Doesn't Have Many Features But Its Stable.</p></div></div>
+    <div style="background-color:#007bff">
+  </div>
   <header class="bg-primary text-white">
     <div class="container text-center">
     </div>
